<resources>
    <string name="app_name">Prospector</string>
    <string name="connected">Connected %s</string>
    <string name="disconnect">Disconnect %s</string>
    <string name="close">Close</string>
    <string name="delete_all">Delete All</string>
    <string name="ok">OK</string>
    <string name="ask_delete_all_scans">Are you sure you want to delete all scans?</string>
    <string name="ask_delete_scan">Are you sure you want to delete this scan?</string>
    <string name="scan_name_header">scanid</string>
    <string name="scan_date_header">scandate</string>
    <string name="scan_device_id_header">deviceid</string>
    <string name="spec_light_source_header">lightsource</string>
    <string name="scan_note_header">scannote</string>
    <string name="serial_header">serial</string>
    <string name="humidity_header">humidity</string>
    <string name="temperature_header">temperature</string>
    <string name="alias_header">Alias</string>
    <string name="device_id_header">Device ID</string>
    <string name="device_type_header">Device Type</string>
    <string name="hw_version_header">HW Version</string>
    <string name="op_mode_header">OP Mode</string>
    <string name="sw_version_header">SW Version</string>
    <string name="preferences_profile_title">Profile</string>
    <string name="pref_operator_title">Operator</string>
    <string name="pref_scanning_title">Device Settings</string>
    <string name="pref_led_frames_title">LED Frames</string>
    <string name="pref_led_frames_summary">The number of frames per scan.</string>
    <string name="pref_bulb_frames_title">Bulb Frames</string>
    <string name="nav_label_experiment_list">Experiment List Fragment</string>
    <string name="nav_label_scan_list">List of scans for a given experiment.</string>
    <string name="nav_label_settings">Settings Fragment</string>
    <string name="about">About</string>
    <string name="double_back_press">Press back again to exit</string>
    <string name="undo">Undo</string>
    <string name="pref_device_ip">Device IP Address</string>
    <string name="pref_device_default_ip">192.168.1.1</string>
    <string name="pref_device_ip_summary">The IP address used to connect to the operator\'s device.</string>
    <string name="nav_label_sample_list">Sample Fragment</string>
    <string name="add_sample">Add Sample</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="search_for_sample">Search For Sample</string>
    <string name="barcode_scan_fragment_label">Barcode scan fragment for searching sample ids.</string>
    <string name="settings_error_num_frames_must_exceed_zero">Please enter at least one bulb or LED frame.</string>
    <string name="ask_delete_experiment">Delete this experiment?</string>
    <string name="pref_device_type">Device Information</string>
    <string name="led">LED (%d)</string>
    <string name="bulb">Bulb (%d)</string>
    <string name="pref_convert_wavelengths_title">Convert to wavelengths</string>
    <string name="pref_convert_wavelengths_summary">The LinkSquare outputs pixel arrays by default, this setting converts this data to spectral wavelengths.</string>
    <string name="export_experiment_name_header">experiment</string>
    <string name="export_device_type_header">deviceType</string>
    <string name="export_operator_header">operator</string>
    <string name="dialog_new_experiment_name_hint">New experiment name</string>
    <string name="dialog_new_experiment_note_hint">Experiment notes</string>
    <string name="dialog_new_experiment_title">Experiment Creator</string>
    <string name="dialog_new_experiment_prefix">New Experiment: </string>
    <string name="dialog_new_experiment_error">Please enter a non-empty experiment name.</string>
    <string name="dialog_new_sample_note_hint">Sample notes:</string>
    <string name="dialog_new_sample_name_hint">Sample name: </string>
    <string name="dialog_new_sample_error">Sample name must not be blank.</string>
    <string name="dialog_new_samples_prefix">New sample: </string>
    <string name="dialog_new_sample_title">Sample Creator</string>
    <string name="data">Data</string>
    <string name="device_connected">Device connection status.</string>
    <string name="nav_label_new_sample">Sample Creator Fragment</string>
    <string name="nav_label_new_experiment">New Experiment Creator Fragment</string>
    <string name="frag_instructions_step_one">Ensure your device is in AP mode. If the light is red, the battery is low. If the light is blue, press the button once.</string>
    <string name="frag_instructions_step_two">After setting your device to AP mode, select the WiFi network on your phone. LinkSquare networks start with LS, and the default password is 8 zeros.</string>
    <string name="frag_instructions_step_three">If the light is white, you\'re connected! Next create an experiment and sample to start scanning.</string>
    <string name="frag_instructions_step_four">Click the bottom-right button to start creating Experiments. Once an experiment is made, you can similarly make Samples and start using your spectrometer.</string>
    <string name="frag_instructions_step_five">(Optional) To connect via IoT, go to the app settings and enter the SSID and password for your network. You can manually set what IP-address to connect to in the settings, or search for local devices.</string>
    <string name="frag_is_instructions_step_one">Ensure your device is on, a blue light should be solid or flashing if already connected.</string>
    <string name="frag_is_instructions_step_two">In Prospector, create a new experiment and select InnoSpectra Nano. This will initiate a device connection, please wait a moment.</string>
    <string name="frag_is_instructions_step_three">Wait until the configurations are read, indicated by the progress bar.</string>
    <string name="frag_is_instructions_step_four">(Advanced) Create new scan configurations in the settings. It is highly recommended to use the default scan configurations.</string>
    <string name="frag_indigo_instructions_step_one">Ensure your device is on, the top-most middle LED should be green, or red if already connected. Navigate to the settings in Prospector, choose Indigo, then Find a device.</string>
    <string name="frag_indigo_instructions_step_two">Wait for BLE devices to appear, click on your Indigo device.</string>
    <string name="frag_indigo_instructions_step_three">In the data tab, create a new experiment and select Indigo. This will initiate a device connection, please wait a moment.</string>
    <string name="frag_indigo_instructions_step_four">If you can\'t find your device or scans are not completing, try to reset the device.</string>
    <string name="instructions_step_one_content_description">Step One</string>
    <string name="instructions_step_two_content_description">Step Two</string>
    <string name="instructions_step_three_content_description">Step Three</string>
    <string name="instructions_step_four_content_description">Step Four</string>
    <string name="instructions_step_five_content_description">Step Five</string>
    <string name="nav_label_connect_instructions">Instructions for connecting the device using AP mode.</string>
    <string name="pref_iot_title">IoT Settings</string>
    <string name="pref_iot_summary">You can use IoT Mode when there is an available Wi-Fi network.</string>
    <string name="pref_device_ssid_summary">The name of your Wi-Fi network.</string>
    <string name="pref_device_ssid">SSID</string>
    <string name="pref_device_password">Password</string>
    <string name="pref_device_iot_list">Connect</string>
    <string name="pref_iot_list_no_devices">Click to start IoT device search.</string>
    <string name="pref_device_iot_searching">Searching…</string>
    <string name="frag_new_sample_dialog_duplicate_title">Sample Exists</string>
    <string name="frag_new_sample_dialog_duplicate_message">This sample has already been created. Would you like to add additional scans to this sample or create a new sample?</string>
    <string name="frag_new_sample_dialog_add_to_sample">Add to sample</string>
    <string name="frag_new_sample_dialog_new_sample">Create new sample</string>
    <string name="frag_scan_list_dialog_choose_color_title">Choose a color</string>
    <string name="menu_bot_nav_export_title">Export</string>
    <string name="nav_label_about">About Fragment</string>
    <string name="about_version_title">Version</string>
    <string name="about_title_other_apps">Other PhenoApps</string>
    <string name="about_project_lead_title">Project Lead</string>
    <string name="about_developer_trife" translatable="false">Trevor Rife</string>
    <string name="about_developer_trife_location" translatable="false">Kansas State University</string>
    <string name="about_developer_trife_email" translatable="false">trife@ksu.edu</string>
    <string name="about_email_title">Email</string>
    <string name="about_contributors_title">Contributors</string>
    <string name="about_contributors_developers_title">Developers</string>
    <string name="about_contributors_funding_title">Funding</string>
    <string name="about_contributors_funding_text_first" translatable="false">Development of </string>
    <string name="about_contributors_funding_text_after" translatable="false"> has been supported by the Collaborative Crop Research Program of The McKnight Foundation, the National Science Foundation (#1543958), and the National Institute of Food and Agriculture (#2019-67021-29931).</string>
    <string name="about_rate">Rate this app</string>
    <string name="about_technical_title">Technical Details</string>
    <string name="about_github_title">GitHub</string>
    <string name="about_help_translate_title">Help translate</string>
    <string name="changelog_title">Changelog</string>
    <string name="libraries_title">Libraries</string>
    <string name="frag_scan_device_type_mismatch">Connected device does not match the current experiment.</string>
    <string name="activity_main_sample_data_title">Import sample data?</string>
    <string name="dialog_create_scan_ls_instructions_content_descp">Use your device to scan your sample.</string>
    <string name="frag_exp_list_fab_cont_descp">Click this button to create a new experiment.</string>
    <string name="frag_new_sample_barcode_scan_cont_desc">Click this button to start scanning a barcode.</string>
    <string name="frag_sample_fab_cont_desc">Click this button to create a new sample.</string>
    <string name="menu_sample_list_sort_title">Sort</string>
    <string name="pref_link_square_scanning_title">LinkSquare Settings</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="frag_cc_digital_resolution_title">Digital Resolution</string>
    <string name="frag_cc_digital_resolution_subtitle">This designates the number of wavelength points for the defined spectral range. Resolution should sample twice the full width half maximum (FWHM).\n<b>DR<sup>*</sup> = Digital Resolution Limit</b>\n<b>DR = Recommended Resolution</b></string>
    <string name="frag_cc_digital_resolution_fwhm_subtitle">DR<sup>*</sup> ≥ DR ≥ 2 * (Range<sup>End</sup> - Range<sup>Start</sup>) / Width</string>
    <string name="frag_cc_digital_resolution_fwhm_preview">%s ≥ %s ≥ 2 * (%s - %s) / %s</string>
    <string name="frag_cc_digital_resolution_hint">Enter digital resolution</string>
    <string name="frag_cc_spectral_range_title">Spectral Range</string>
    <string name="frag_cc_spectral_range_subtitle">The wavelength range for this section. This device\'s supported range is between 900 and 1700 inclusively.</string>
    <string name="frag_cc_spectral_range_start_hint">Spectral range start</string>
    <string name="frag_cc_spectral_range_end_hint">Spectral range end</string>
</resources>