<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_sample_list_sort"
        android:icon="@drawable/ic_sort_black_24dp"
        app:showAsAction="always"
        android:title="@string/menu_sample_list_sort_title"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_export"
        android:icon="@drawable/ic_export_scans"
        app:showAsAction="always"
        android:title="@string/menu_bot_nav_export_title"/>
    <item
        android:id="@+id/action_connection"
        android:icon="@drawable/ic_vector_difference_ab"
        app:showAsAction="always"
        android:title="@string/device_connected"/>
</menu>