<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/stepOneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/frag_is_instructions_step_one"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/stepOneImageView"
                android:layout_width="0dp"
                android:layout_height="512dp"
                android:layout_margin="16dp"
                android:src="@drawable/is_tutorial_1"
                app:layout_constraintTop_toBottomOf="@id/stepOneTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/instructions_step_one_content_description" />

            <TextView
                android:id="@+id/stepTwoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/frag_is_instructions_step_two"
                app:layout_constraintTop_toBottomOf="@id/stepOneImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/stepTwoImageView"
                android:layout_width="0dp"
                android:layout_height="512dp"
                android:src="@drawable/is_tutorial_2"
                app:layout_constraintTop_toBottomOf="@id/stepTwoTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/instructions_step_two_content_description"/>

            <TextView
                android:id="@+id/stepThreeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/frag_is_instructions_step_three"
                app:layout_constraintTop_toBottomOf="@id/stepTwoImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/stepThreeImageView"
                android:layout_width="0dp"
                android:layout_height="512dp"
                android:contentDescription="@string/instructions_step_three_content_description"
                android:src="@drawable/is_tutorial_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stepThreeTextView" />

            <TextView
                android:id="@+id/stepFourTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/frag_is_instructions_step_four"
                app:layout_constraintTop_toBottomOf="@id/stepThreeImageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/stepFourImageView"
                android:layout_width="0dp"
                android:layout_height="512dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/is_tutorial_4"
                android:contentDescription="@string/instructions_step_four_content_description"
                app:layout_constraintTop_toBottomOf="@id/stepFourTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>