<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar style="@style/Text.Header"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:menu="@menu/menu_inno_config_settings"
        app:navigationIcon="@drawable/ic_back_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:secondaryProgress="75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:id="@+id/frag_cc_pb"/>

    <TextView style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_margin="16dp"
        android:id="@+id/frag_cc_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/frag_cc_digital_resolution_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:layout_margin="16dp"
        android:id="@+id/frag_cc_subtitle_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/frag_cc_digital_resolution_subtitle"
        app:layout_constraintBottom_toTopOf="@id/frag_cc_subtitle_fwhm_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_cc_title_tv"/>

    <TextView style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_margin="16dp"
        android:padding="4dp"
        android:id="@+id/frag_cc_subtitle_fwhm_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/frag_cc_digital_resolution_fwhm_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_cc_subtitle_tv"/>

    <TextView style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_margin="16dp"
        android:id="@+id/frag_cc_subtitle_fwhm_preview_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/frag_cc_digital_resolution_fwhm_preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_cc_subtitle_fwhm_tv"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frag_cc_digital_resolution_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frag_cc_subtitle_fwhm_preview_tv"
        android:layout_margin="16dp"
        android:inputType="number"
        android:autofillHints="none"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:hint="@string/frag_cc_digital_resolution_hint"/>

    <Button
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frag_cc_back_btn"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/frag_cc_next_btn"
        app:layout_constraintStart_toEndOf="@id/frag_cc_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:layout_margin="16dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/frag_cc_next_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/frag_cc_back_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/next"/>

</androidx.constraintlayout.widget.ConstraintLayout>